--- a/src/index.html
+++ b/src/index.html
@@ -242,7 +242,27 @@
       >
         <h2 class="section__title">Галерея</h2>
         <div class="section-gallery__slider slider">
-          <div class="slider__content"></div>
+          <div class="slider__content">
+            <img
+              class="slider__images slider__images--1"
+              src="./images/slider/slider-1.png" alt="slider-1"
+            >
+            <img
+              class="slider__images slider__images--2"
+              src="./images/slider/slider-2.png" alt="slider-2"
+            >
+            <img
+              class="slider__images slider__images--3"
+              src="./images/slider/slider-3.png" alt="slider-3"
+            >
+            <img
+              class="slider__images slider__images--4"
+              src="./images/slider/slider-4.png" alt="slider-4">
+            <img
+              class="slider__images slider__images--5"
+              src="./images/slider/slider-5.png" alt="slider-5"
+            >
+          </div>
           <div class="slider__stick stick">
             <div class="stick__element stick__element--gray"></div>
             <div class="stick__element"></div>
