--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,493 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>ХУДОЖНІЙ МУЗЕЙ</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/logo.png"
+    />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+
+  <body class="page">
+    <header
+      class="page__header"
+      id="top"
+    >
+      <a
+        href="#menu"
+        class="baseline-menu"
+      ></a>
+      <div class="page__header-section page__header-section--first">
+        <h1 class="page__header-section--h1">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <div class="tickets">
+          <a
+            class="tickets-section tickets-section--first"
+            href="#"
+          >
+            <p class="tickets__text">КВИТКИ</p>
+          </a>
+          <a
+            href="#"
+            class="tickets-section tickets-section--second"
+          ></a>
+        </div>
+      </div>
+
+      <div class="page__header-section page__header-section--second">
+        <div class="page__header-section--second--wrapper">
+          <h2 class="page__header-section--h2">
+            <a
+              href="#"
+              class="page__header-section--h2-a"
+            >
+              NA
+              <br />
+              MU
+            </a>
+          </h2>
+        </div>
+      </div>
+
+      <div class="page__header--events">
+        <a
+          href="#events"
+          class="page__header--events-a"
+        >
+          ПОДІЇ
+        </a>
+      </div>
+    </header>
+
+    <aside
+      class="page__menu"
+      id="menu"
+    >
+      <a
+        href="#"
+        class="baseline-close--tablet"
+      ></a>
+      <div class="page__menu-section page__menu-section--first">
+        <a
+          href="#"
+          class="baseline-close--phone"
+        ></a>
+        <div class="page__menu-section--first--element">
+          <a
+            href="#gallery"
+            class="page__menu-section--first--element--a page__menu-section--first--element--a-gal"
+          >
+            Галерея
+          </a>
+          <a
+            href="#events"
+            class="page__menu-section--first--element--a page__menu-section--first--element--a-eve"
+          >
+            Виставки та події
+          </a>
+        </div>
+
+        <div class="page__menu-section--first--element">
+          <a
+            href="#lection"
+            class="page__menu-section--first--element--a page__menu-section--first--element--a-gal-lec"
+          >
+            Про Нас
+          </a>
+          <a
+            href="#contacts"
+            class="page__menu-section--first--element--a page__menu-section--first--element--a-gal-cont"
+          >
+            Контакти
+          </a>
+        </div>
+      </div>
+
+      <div class="page__menu-section--line"></div>
+
+      <div class="page__menu-section page__menu-section--second">
+        <div class="page__menu-section--second--element">
+          <p
+            class="page__menu-section--second--element--a page__menu-section--second--element--a-grafic"
+          >
+            Графік роботи
+          </p>
+          <li class="page__menu-section--second--element--a">
+            <span class="page__menu-section--second--element-span">
+              12:00 — 20:00
+            </span>
+            середа
+          </li>
+          <li class="page__menu-section--second--element--a">
+            <span class="page__menu-section--second--element-span">
+              12:00 — 20:00
+            </span>
+            четвер
+          </li>
+          <li class="page__menu-section--second--element--a">
+            <span class="page__menu-section--second--element-span">
+              12:00 — 20:00
+            </span>
+            п'ятниця
+          </li>
+          <li class="page__menu-section--second--element--a">
+            <span class="page__menu-section--second--element-span">
+              12:00 — 19:00
+            </span>
+            субота
+          </li>
+          <li class="page__menu-section--second--element--a">
+            <span class="page__menu-section--second--element-span">
+              12:00 — 19:00
+            </span>
+            неділя
+          </li>
+        </div>
+
+        <div
+          class="page__menu-section--second--element page__menu-section--second--element-weekends"
+        >
+          <p class="page__menu-section--second--element--a">
+            <span class="page__menu-section--second--element-span">
+              Вихідні:
+            </span>
+            понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+      </div>
+    </aside>
+
+    <main
+      class="page__main"
+      id="events"
+    >
+      <h2 class="page__main-h2">Актуальні події</h2>
+
+      <section class="page__main-section page__main-section--exhibition">
+        <div
+          class="page__main-section--exhibition--pic page__main-section--exhibition--pic-first"
+        ></div>
+
+        <div class="page__main-section--exhibition--block">
+          <div class="page__main-section--exhibition--block--date">
+            <p class="page__main-section--exhibition--block-p">ВИСТАВКА</p>
+            <p class="page__main-section--exhibition--block-date">
+              26.08-29.11.2019
+            </p>
+          </div>
+
+          <h3 class="page__main-section--exhibition-h3">
+            Йду і повертаюсь
+            <img
+              src="./images/icons/orange-sq.svg"
+              alt="s"
+              class="page__main-section--exhibition-h3--img"
+            />
+          </h3>
+
+          <p class="page__main-section--exhibition-p">
+            Національний Художній Музей України презентує унікальну частину
+            колекції Градобанку - українське мистецтво другої половини 1980-1995
+            років.
+          </p>
+        </div>
+      </section>
+
+      <section class="page__main-section page__main-section--exhibition">
+        <div
+          class="page__main-section--exhibition--pic page__main-section--exhibition--pic-second"
+        ></div>
+
+        <div class="page__main-section--exhibition--block">
+          <div class="page__main-section--exhibition--block--date">
+            <p class="page__main-section--exhibition--block-p">ВИСТАВКА</p>
+            <p class="page__main-section--exhibition--block-date">
+              26.08-29.11.2019
+            </p>
+          </div>
+
+          <h3 class="page__main-section--exhibition-h3">
+            І спогади і мрії
+            <img
+              src="./images/icons/orange-sq.svg"
+              alt="s"
+              class="page__main-section--exhibition-h3--img"
+            />
+          </h3>
+
+          <p class="page__main-section--exhibition-p">
+            Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці Тетяни Яблонської відкриває
+            ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </div>
+      </section>
+
+      <section
+        class="page__main-section page__main-section--lection"
+        id="lection"
+      >
+        <div class="page__main-section page__main-section--lection--img"></div>
+
+        <div class="page__main-section page__main-section--lection--block">
+          <div class="page__main-section--lection--block--date">
+            <p class="page__main-section--lection--block-p">ЛЕКЦІЯ</p>
+            <p class="page__main-section--lection--block-date">
+              26/08/2019 - 11:00
+            </p>
+          </div>
+
+          <h3 class="page__main-section--lection--block-h3">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </section>
+
+      <section
+        class="page__main-section page__main-section--gallery"
+        id="gallery"
+      >
+        <h2 class="page__main-section--gallery-h2">Галерея</h2>
+
+        <div class="page__main-section--gallery--slider">
+          <div
+            class="page__main-section--gallery--slider-container"
+            id="sliderContainer"
+          >
+            <div
+              class="page__main-section--gallery--slider-img page__main-section--gallery--slider-img--first"
+              id="img1"
+              onclick="moveSlide(0)"
+            >
+              <img
+                src="./images/Section3_p1.png"
+                alt="pic1"
+              />
+            </div>
+            <div
+              class="page__main-section--gallery--slider-img page__main-section--gallery--slider-img--second"
+              id="img2"
+              onclick="moveSlide(1)"
+            >
+              <img
+                src="./images/Section3_p2.png"
+                alt="pic2"
+              />
+            </div>
+            <div
+              class="page__main-section--gallery--slider-img page__main-section--gallery--slider-img--third"
+              id="img3"
+              onclick="moveSlide(2)"
+            >
+              <img
+                src="./images/Section3_p3.png"
+                alt="pic3"
+              />
+            </div>
+            <div
+              class="page__main-section--gallery--slider-img page__main-section--gallery--slider-img--fourth"
+              id="img4"
+              onclick="moveSlide(3)"
+            >
+              <img
+                src="./images/Section3_p4.png"
+                alt="pic4"
+              />
+            </div>
+          </div>
+
+          <div class="page__main-section--gallery--slider-buttons">
+            <span
+              class="page__main-section--gallery--slider-buttons--bullet page__main-section--gallery--slider-buttons--bullet-active"
+              onclick="changeSlide(0)"
+            ></span>
+            <span
+              class="page__main-section--gallery--slider-buttons--bullet"
+              onclick="changeSlide(1)"
+            ></span>
+            <span
+              class="page__main-section--gallery--slider-buttons--bullet"
+              onclick="changeSlide(2)"
+            ></span>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page__footer">
+      <div
+        class="page__footer--first"
+        id="contacts"
+      >
+        <div
+          class="page__footer--first-section page__footer--first-section--sub"
+        >
+          <h3 class="page__footer--first-section-h3">Підписка</h3>
+          <p class="page__footer--first-section-p">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+        </div>
+        <div
+          class="page__footer--first-section page__footer--first-section--form"
+        >
+          <form
+            onsubmit="this.reset(); return false;"
+            class="page__footer--first-section--cont"
+          >
+            <input
+              type="email"
+              name="Email"
+              class="page__footer--first-section__email"
+              placeholder="E-mail"
+              required
+            />
+            <button
+              type="submit"
+              class="page__footer--first-section__button"
+            >
+              <div class="page__footer--first-section__button-arr"></div>
+            </button>
+          </form>
+        </div>
+      </div>
+
+      <div class="page__footer--second">
+        <div class="page__footer--second__NAMU">
+          <a
+            href="#"
+            class="page__footer--second__NAMU--text"
+          >
+            NA
+            <br />
+            MU
+          </a>
+
+          <div class="page__footer--second__NAMU--icons">
+            <a
+              href="https://www.instagram.com/"
+              class="page__footer--second__NAMU--icon page__footer--second__NAMU--icon-fac"
+              target="_blank"
+            ></a>
+            <a
+              href="https://www.facebook.com/"
+              class="page__footer--second__NAMU--icon page__footer--second__NAMU--icon-ins"
+              target="_blank"
+            ></a>
+          </div>
+        </div>
+
+        <div class="page__footer--second__schedule">
+          <p class="page__footer--second__schedule--p">Графік роботи</p>
+
+          <li class="page__footer--second__schedule--li">
+            <span class="page__footer--second__schedule--li--span">
+              12:00 — 20:00
+            </span>
+            середа
+          </li>
+          <li class="page__footer--second__schedule--li">
+            <span class="page__footer--second__schedule--li--span">
+              12:00 — 20:00
+            </span>
+            четвер
+          </li>
+          <li class="page__footer--second__schedule--li">
+            <span class="page__footer--second__schedule--li--span">
+              12:00 — 20:00
+            </span>
+            п’ятниця
+          </li>
+          <li class="page__footer--second__schedule--li">
+            <span class="page__footer--second__schedule--li--span">
+              11:00 — 19:00
+            </span>
+            субота
+          </li>
+          <li class="page__footer--second__schedule--li">
+            <span class="page__footer--second__schedule--li--span">
+              11:00 — 19:00
+            </span>
+            неділя
+          </li>
+
+          <p class="page__footer--second__schedule--p">
+            <br />
+            Вихідні понеділок, вівторок Каса припиняє роботу за 1 годину до
+            закриття музею
+          </p>
+        </div>
+
+        <div class="page__footer--second__сontacts">
+          <p class="page__footer--second__сontacts--p">Контакти:</p>
+
+          <p class="page__footer--second__сontacts--p">
+            вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс
+            +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
+          </p>
+        </div>
+
+        <a
+          href="#top"
+          class="page__footer--second__button"
+        ></a>
+
+        <div class="page__footer--second__arr"></div>
+
+        <div class="page__footer--second__about-us--first">
+          <a
+            href="#gallery"
+            class="page__footer--second__about-us-p"
+          >
+            Галерея
+          </a>
+          <a
+            href="#events"
+            class="page__footer--second__about-us-p"
+          >
+            Виставки та події
+          </a>
+        </div>
+
+        <div class="page__footer--second__about-us--second">
+          <a
+            href="#lection"
+            class="page__footer--second__about-us-p"
+          >
+            Про Нас
+          </a>
+          <a
+            href="#contacts"
+            class="page__footer--second__about-us-p"
+          >
+            Контакти
+          </a>
+        </div>
+
+        <div class="page__footer--second__copyright-des">
+          <p class="page__footer--second__copyright-p">
+            Copyright © 2019. All Rights Reserved.
+          </p>
+        </div>
+
+        <div class="page__footer--second__copyright-cop">
+          <p
+            class="page__footer--second__copyright-p page__footer--second__copyright-p-sec"
+          >
+            Designed by Zhyriada Marina
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
