--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,7 +13,6 @@
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
     <script src="scripts/main.js"></script>
   </body>
 </html>
