new fixed version

--- a/src/index.html
+++ b/src/index.html
@@ -182,11 +182,13 @@
       >
         <h2 class="section__title">Актуальні події</h2>
         <div class="section-actuals__action action">
-          <img
-            class="action__image"
-            src="images/actuals/go&comeback.png"
-            alt="go&comeback"
-          />
+          <div class="action__images">
+            <img
+              class="action__image"
+              src="images/actuals/go&comeback.png"
+              alt="go&comeback"
+            />
+          </div>
           <div class="action__content">
             <div class="action__info info">
               <p class="info__act">ВИСТАВКА</p>
@@ -204,11 +206,13 @@
           </div>
         </div>
         <div class="section-actuals__action action">
-          <img
-            class="action__image"
-            src="images/actuals/dreams.png"
-            alt="go&comeback"
-          />
+          <div class="action__images">
+            <img
+              class="action__image"
+              src="images/actuals/dreams.png"
+              alt="go&comeback"
+            />
+          </div>
           <div class="action__content">
             <div class="action__info info">
               <p class="info__act">ВИСТАВКА</p>
