completed header & menu

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+  <head class="page">
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -12,8 +12,118 @@
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <div class="header">
+      <div class="container top-bar">
+        <a
+          href="#menu"
+          class="icon icon--burger"
+        ></a>
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
+          <img
+            src="images/Logo.png"
+            alt="logo Na Mu"
+            class="top-bar__logo-img"
+          />
+        </a>
+      </div>
+      <div class="header__content">
+        <div class="header__right"></div>
+        <div class="header__left container">
+          <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a
+            href="#"
+            class="section-button"
+          >
+            <h1 class="section-button__title">КВИТКИ</h1>
+          </a>
+        </div>
+      </div>
+    </div>
+
+    <aside
+      class="menu page__menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="menu__content">
+          <a
+            href="#"
+            class="icon icon--close"
+          ></a>
+
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__items">
+                <a
+                  class="nav__link"
+                  href="#gallery"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__items">
+                <a
+                  class="nav__link"
+                  href="#about"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__items">
+                <a
+                  class="nav__link"
+                  href="#exhibitions"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__items">
+                <a
+                  class="nav__link"
+                  href="#contacts"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="menu__line"></div>
+
+          <div class="schedule">
+            <h4 class="schedule__title">Графік роботи</h4>
+            <div class="schedule__content">
+              <p class="schedule__text">
+                <strong>12:00 — 20:00</strong>
+                середа
+                <br />
+                <strong>12:00 — 20:00</strong>
+                четвер
+                <br />
+                <strong>12:00 — 20:00</strong>
+                п’ятниця
+                <br />
+                <strong>11:00 — 19:00</strong>
+                субота
+                <br />
+                <strong>11:00 — 19:00</strong>
+                неділя
+              </p>
+              <p class="schedule__text">
+                <strong>Вихідні</strong>
+                : понеділок, вівторок Каса припиняє роботу за 1 годину до
+                закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </aside>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
