--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,360 @@
     <title>Title</title>
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/body.scss"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header
+      class="header"
+      id="header"
+    >
+      <div class="header__content">
+        <div class="header__menu"></div>
+        <h1 class="header__title">NA MU</h1>
+      </div>
+      <div class="museum">
+        <h1 class="museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+        <a
+          href="#"
+          class="museum__link"
+        >
+          <div class="museum__link__ticket">КВИТКИ</div>
+          <div class="museum__link__arrow">
+            <img
+              src="./images/ticketVector.svg"
+              alt="ticketArrow"
+              class="museum__link__arrow__img"
+            />
+          </div>
+        </a>
+      </div>
+    </header>
+    <aside class="aside">
+      <div class="menu">
+        <div class="menu__button"></div>
+        <div class="menu__galereyFoto">
+          <a
+            href="#gallery"
+            class="menu__galereyFoto__links"
+          >
+            Галерея
+          </a>
+          <a
+            href="#events"
+            class="menu__galereyFoto__links"
+          >
+            Виставки та події
+          </a>
+        </div>
+        <div class="menu__galereyFoto">
+          <a
+            href="#"
+            class="menu__galereyFoto__links"
+          >
+            Про Нас
+          </a>
+          <a
+            href="#contacts"
+            class="menu__galereyFoto__links"
+          >
+            Контакти
+          </a>
+        </div>
+      </div>
+      <div class="botom">
+        <p class="plan">Графік роботи</p>
+        <ul class="botom__planList">
+          <li class="botom__planList__workTime">12:00 — 20:00 середа</li>
+          <li class="botom__planList__workTime">12:00 — 20:00 четвер</li>
+          <li class="botom__planList__workTime">12:00 — 20:00 п’ятниця</li>
+          <li class="botom__planList__workTime">11:00 — 19:00 субота</li>
+          <li class="botom__planList__workTime">11:00 — 19:00 неділя</li>
+        </ul>
+        <p class="plan">
+          <span class="plan__title">Вихідні:</span>
+          понеділок, вівторок
+        </p>
+        <p class="plan">Каса припиняє роботу за 1 годину до закриття музею</p>
+      </div>
+    </aside>
+    <main class="main">
+      <section
+        class="events"
+        id="events"
+      >
+        <h2 class="events__title">Актуальні події</h2>
+        <article class="events__article">
+          <img
+            src="./images/eventsArticle1 2.4.png"
+            alt="eventsArticle1"
+            class="events__article__img"
+          />
+          <div class="events__article__text">
+            <div>ВИСТАВКА</div>
+            <div>26.08-29.11.2019</div>
+          </div>
+          <h3 class="events__article__title">Йду і повертаюсь</h3>
+          <p class="events__article__discription">
+            Національний Художній Музей України презентує унікальну частину
+            колекції Градобанку - українське мистецтво другої половини 1980-1995
+            років.
+          </p>
+        </article>
+        <article class="events__article">
+          <img
+            src="./images/eventsArticle2 4.4.png"
+            alt="eventsArticle2"
+            class="events__article__img"
+          />
+          <div class="events__article__text">
+            <div>ВИСТАВКА</div>
+            <div>26.08-29.11.2019</div>
+          </div>
+          <h3 class="events__article__title">І спогади і мрії</h3>
+          <p class="events__article__discription">
+            Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці Тетяни Яблонської відкриває
+            ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </article>
+        <article class="events__article events__position">
+          <img
+            src="./images/eventsArticle 3.png"
+            alt="eventsArticle3"
+            class="events__article__img"
+          />
+          <div class="events__position__div">
+            <div class="events__article__text">
+              <div>ВИСТАВКА</div>
+              <div>26.08-29.11.2019</div>
+            </div>
+            <h3 class="events__article__title">Від класицизму до романтизму</h3>
+          </div>
+        </article>
+      </section>
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__content">
+          <div class="gallery__slider">
+            <img
+              src="./images/Gallery 13.10.png"
+              alt="UkrainianGirl"
+              class="gallery__slider-img"
+            />
+            <img
+              src="./images/Gus 24.1.png"
+              alt="Gus"
+              class="gallery__slider-img gallery__slider-img--unactive"
+            />
+            <img
+              src="./images/eventsArticle 3.png"
+              alt="Dawn"
+              class="gallery__slider-img gallery__slider-img--unactive"
+            />
+            <img
+              src="./images/Winter.png"
+              alt="Winter"
+              class="gallery__slider-img gallery__slider-img--unactive"
+            />
+          </div>
+          <div class="gallery__dots">
+            <div class="gallery__dots__dot gallery__dots__dot--active"></div>
+            <div class="gallery__dots__dot"></div>
+            <div class="gallery__dots__dot"></div>
+            <div class="gallery__dots__dot"></div>
+          </div>
+        </div>
+      </section>
+      <section class="subscribe">
+        <h2 class="subscribe__title">Підписка</h2>
+        <p class="subscribe__text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
+        <form class="subscribe__form">
+          <input
+            type="email"
+            placeholder="E-mail"
+            required
+            class="subscribe__form__input"
+          />
+          <button
+            type="submit"
+            class="subscribe__form__button"
+          >
+            <img
+              src="./images/VectorButton.png"
+              alt="buttonArrow"
+              class="subscribe__form__button-img"
+            />
+          </button>
+        </form>
+      </section>
+    </main>
+    <footer class="footer">
+      <div class="footer__top">
+        <h1 class="footer__title">NA MU</h1>
+        <div class="footer__social">
+          <a
+            href="https://www.facebook.com/"
+            class="footer__social__icon"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="./images/facebook-letter-logo.png"
+              alt="facebook"
+              class="footer__social__icon--img"
+            />
+          </a>
+          <a
+            href="https://www.instagram.com/accounts/login/"
+            class="footer__social__icon"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            <img
+              src="./images/instagram (3).png"
+              alt="instagram"
+              class="footer__social__icon--img"
+            />
+          </a>
+        </div>
+      </div>
+      <div class="footer__content">
+        <div class="botom botom--footer">
+          <p class="plan plan--text">Графік роботи</p>
+          <ul class="botom__planList">
+            <li
+              class="botom__planList__workTime botom__planList__workTime--text"
+            >
+              12:00 — 20:00 середа
+            </li>
+            <li
+              class="botom__planList__workTime botom__planList__workTime--text"
+            >
+              12:00 — 20:00 четвер
+            </li>
+            <li
+              class="botom__planList__workTime botom__planList__workTime--text"
+            >
+              12:00 — 20:00 п’ятниця
+            </li>
+            <li
+              class="botom__planList__workTime botom__planList__workTime--text"
+            >
+              11:00 — 19:00 субота
+            </li>
+            <li
+              class="botom__planList__workTime botom__planList__workTime--text"
+            >
+              11:00 — 19:00 неділя
+            </li>
+          </ul>
+          <p class="plan plan--text">
+            <span class="plan__title plan__title--text">Вихідні:</span>
+            понеділок, вівторок
+          </p>
+          <p class="plan plan--text">
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
+        <div
+          class="footer__contacts"
+          id="contacts"
+        >
+          <p class="plan plan--text">Контакти</p>
+          <p class="plan plan--text">
+            вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57 факс
+            +38 (044) 278-74-54 e-mail:
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="plan plan--text"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              info@namu.kiev.ua
+            </a>
+          </p>
+        </div>
+      </div>
+      <a
+        href="#header"
+        class="footer__up"
+      >
+        <img
+          src="./images/ArrowUp.png"
+          alt="ArrowUp"
+          class="footer__up__img"
+        />
+      </a>
+      <div class="menu menu--footer">
+        <div class="menu__galereyFoto menu__galereyFoto--footer">
+          <a
+            href="#gallery"
+            class="menu__galereyFoto__links menu__galereyFoto__links--text"
+          >
+            Галерея
+          </a>
+          <a
+            href="#events"
+            class="menu__galereyFoto__links menu__galereyFoto__links--text"
+          >
+            Виставки та події
+          </a>
+        </div>
+        <div class="menu__galereyFoto menu__galereyFoto--footer">
+          <a
+            href="#"
+            class="menu__galereyFoto__links menu__galereyFoto__links--text"
+          >
+            Про Нас
+          </a>
+          <a
+            href="#contacts"
+            class="menu__galereyFoto__links menu__galereyFoto__links--text"
+          >
+            Контакти
+          </a>
+        </div>
+      </div>
+      <div class="footer__desing">
+        <div class="footer__desing--text">Designed by Zhyriada Marina</div>
+        <div class="footer__desing--text">
+          Copyright © 2019. All Rights Reserved.
+        </div>
+      </div>
+    </footer>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
