--- a/src/index.html
+++ b/src/index.html
@@ -124,6 +124,75 @@
       </div>
     </aside>
 
+    <main class="main">
+      <div class="main__content">
+        <section class="events" id="exhibitions">
+          <h1 class="events__title container">Актуальні події</h1>
+          <div class="events__cards">
+            <article class="card container">
+              <img
+                src="images/card-1.png"
+                alt="Картина"
+                class="card__image"
+              />
+              <div class="card__info">
+                <div class="card__meta">
+                  <span class="card__type">ВИСТАВКА</span>
+                  <span class="card__dates">26.08–29.11.2025</span>
+                </div>
+                <div class="card__text-content">
+                  <h2 class="card__title">Йду і повертаюсь</h2>
+                  <p class="card__description">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку – українське мистецтво другої
+                    половини 1980–1995 років.
+                  </p>
+                </div>
+              </div>
+            </article>
+            <article class="card container">
+              <img
+                src="images/card-2.png"
+                alt="Картина"
+                class="card__image"
+              />
+              <div class="card__info">
+                <div class="card__meta">
+                  <span class="card__type">ВИСТАВКА</span>
+                  <span class="card__dates">26.08-29.11.2025</span>
+                </div>
+                <div class="card__text-content">
+                  <h2 class="card__title">І спогади і мрії</h2>
+                  <p class="card__description">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни
+                    Яблонської відкриває ретроспективну ювілейну виставку «І
+                    спогади і мрії».
+                  </p>
+                </div>
+              </div>
+            </article>
+            <article class="card card--lecture">
+              <img
+                src="images/card-3.png"
+                alt="Картина"
+                class="card__image card__image--lecture"
+              />
+              <div class="card__info card__info--lecture">
+                <div class="card__meta card__meta--lecture">
+                  <span class="card__type">ЛЕКЦІЯ</span>
+                  <span class="card__dates">26/08/2025 - 11:00</span>
+                </div>
+                <h2 class="card__title card__title--lecture">Від класицизму до<br> романтизму</h2>
+              </div>
+            </article>
+          </div>
+        </section>
+        <section class="gallery"></section>
+        <section class="subscription"></section>
+      </div>
+    </main>
+
     <script src="scripts/main.js"></script>
   </body>
 </html>
