--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
     <title>Title</title>
     <link
       rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="./styles/body.scss"
     />
     <link
@@ -97,19 +101,25 @@
         </div>
       </div>
       <div class="botom">
-        <p class="plan">Графік роботи</p>
-        <ul class="botom__planList">
-          <li class="botom__planList__workTime">12:00 — 20:00 середа</li>
-          <li class="botom__planList__workTime">12:00 — 20:00 четвер</li>
-          <li class="botom__planList__workTime">12:00 — 20:00 п’ятниця</li>
-          <li class="botom__planList__workTime">11:00 — 19:00 субота</li>
-          <li class="botom__planList__workTime">11:00 — 19:00 неділя</li>
-        </ul>
-        <p class="plan">
-          <span class="plan__title">Вихідні:</span>
-          понеділок, вівторок
-        </p>
-        <p class="plan">Каса припиняє роботу за 1 годину до закриття музею</p>
+        <div class="botom__schedule">
+          <p class="plan">Графік роботи</p>
+          <ul class="botom__planList">
+            <li class="botom__planList__workTime">12:00 — 20:00 середа</li>
+            <li class="botom__planList__workTime">12:00 — 20:00 четвер</li>
+            <li class="botom__planList__workTime">12:00 — 20:00 п’ятниця</li>
+            <li class="botom__planList__workTime">11:00 — 19:00 субота</li>
+            <li class="botom__planList__workTime">11:00 — 19:00 неділя</li>
+          </ul>
+        </div>
+        <div class="botom__information">
+          <p class="plan plan--tablet">
+            <span class="plan__title">Вихідні:</span>
+            понеділок, вівторок
+          </p>
+          <p class="plan plan--tablet">
+            Каса припиняє роботу за 1 годину до закриття музею
+          </p>
+        </div>
       </div>
     </aside>
     <main class="main">
@@ -159,11 +169,13 @@
             class="events__article__img"
           />
           <div class="events__position__div">
-            <div class="events__article__text">
-              <div>ВИСТАВКА</div>
-              <div>26.08-29.11.2019</div>
+            <div class="events__position__text">
+              <div>ЛЕКЦІЯ</div>
+              <div>26/08/2019 - 11:00</div>
             </div>
-            <h3 class="events__article__title">Від класицизму до романтизму</h3>
+            <h3 class="events__position__title">
+              Від класицизму до романтизму
+            </h3>
           </div>
         </article>
       </section>
@@ -173,33 +185,38 @@
       >
         <h2 class="gallery__title">Галерея</h2>
         <div class="gallery__content">
-          <div class="gallery__slider">
-            <img
-              src="./images/Gallery 13.10.png"
-              alt="UkrainianGirl"
-              class="gallery__slider-img"
-            />
-            <img
-              src="./images/Gus 24.1.png"
-              alt="Gus"
-              class="gallery__slider-img gallery__slider-img--unactive"
-            />
-            <img
-              src="./images/eventsArticle 3.png"
-              alt="Dawn"
-              class="gallery__slider-img gallery__slider-img--unactive"
-            />
-            <img
-              src="./images/Winter.png"
-              alt="Winter"
-              class="gallery__slider-img gallery__slider-img--unactive"
-            />
-          </div>
-          <div class="gallery__dots">
-            <div class="gallery__dots__dot gallery__dots__dot--active"></div>
-            <div class="gallery__dots__dot"></div>
-            <div class="gallery__dots__dot"></div>
-            <div class="gallery__dots__dot"></div>
+          <div class="gallery__slider swiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="./images/Gallery 13.10.png"
+                  alt="UkrainianGirl"
+                  class="gallery__slider-img"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/Gus 24.1.png"
+                  alt="Gus"
+                  class="gallery__slider-img"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/eventsArticle 3.png"
+                  alt="Dawn"
+                  class="gallery__slider-img"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./images/Winter.png"
+                  alt="Winter"
+                  class="gallery__slider-img"
+                />
+              </div>
+            </div>
+            <div class="swiper-pagination gallery__dots"></div>
           </div>
         </div>
       </section>
@@ -363,6 +380,7 @@
       </div>
     </footer>
 
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
