--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>NAMU</title>
     <link
       rel="stylesheet"
-      href="./styles/general.scss"
+      href="./styles/general.css"
     />
     <link
       rel="preconnect"
@@ -24,13 +24,6 @@
     />
     <link
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
-
-    <link
-      href="
-    https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css
-    "
       rel="stylesheet"
     />
   </head>
@@ -549,8 +542,7 @@
       </div>
     </footer>
   </body>
-  <script src="
-https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js
-"></script>
+
   <script src="scripts/main.js"></script>
+  <script src="../node_modules/@splidejs/splide/dist/js/splide.js"></script>
 </html>
