add task for testing ver. 1.04

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>NAMU</title>
     <link
       rel="stylesheet"
-      href="./styles/general.css"
+      href="./styles/general.scss"
     />
     <link
       rel="preconnect"
@@ -26,6 +26,9 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="shortcut icon" href="./images/favicon-16x16.png"
+    type="image/x-icon">
   </head>
   <body class="page-body">
     <header class="header">
@@ -42,7 +45,7 @@
           <img
             src="./images/logo-icon.svg"
             alt="logo-icon"
-            class="header-logo-img"
+            class="header__logo-img"
           />
         </a>
       </div>
@@ -97,13 +100,13 @@
         <nav class="nav">
           <div class="nav__first-collum nav__first-collum--pad-left">
             <a
-              href="#"
+              href="#mySlider"
               class="nav__link"
             >
               Галерея
             </a>
             <a
-              href="#"
+              href="#events"
               class="nav__link"
             >
               Виставки та події
@@ -117,7 +120,7 @@
               Про Нас
             </a>
             <a
-              href="#"
+              href="#contacts"
               class="nav__link"
             >
               Контакти
@@ -159,7 +162,7 @@
       </div>
     </aside>
     <main class="main">
-      <section class="actual-events-section">
+      <section id="events" class="actual-events-section">
         <h2 class="actual-events-section__section-title">Актуальні події</h2>
 
         <div class="actual-events-section__event-cont">
@@ -466,7 +469,7 @@
           </div>
         </div>
 
-        <div class="footer__contacts-cont">
+        <div id="contacts" class="footer__contacts-cont">
           <h3 class="footer__contacts-title">Контакти:</h3>
           <a
             href="https://maps.app.goo.gl/9nyRBBs8vmxdo9Th7"
@@ -511,13 +514,13 @@
         <nav class="nav-cont">
           <div class="nav-cont__first-collum">
             <a
-              href="#"
+              href="#mySlider"
               class="nav-cont__nav-link"
             >
               Галерея
             </a>
             <a
-              href="#"
+              href="#events"
               class="nav-cont__nav-link"
             >
               Виставки та події
@@ -532,7 +535,7 @@
               Про нас
             </a>
             <a
-              href="#"
+              href="#contacts"
               class="nav-cont__nav-link"
             >
               Контакти
