Add carousel and gallery styles
- Implemented styles for the carousel component, including layout, image handling, and pagination.
- Created styles for the gallery component, enhancing grid layout and responsiveness across different devices.

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,16 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Title</title>
+    <!-- #region Links -->
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <!-- #endregion -->
   </head>
   <body class="page__body">
     <div class="header">
@@ -126,7 +132,10 @@
 
     <main class="main">
       <div class="main__content">
-        <section class="events" id="exhibitions">
+        <section
+          class="events"
+          id="exhibitions"
+        >
           <h1 class="events__title container">Актуальні події</h1>
           <div class="events__cards">
             <article class="card container">
@@ -165,9 +174,9 @@
                   <h2 class="card__title">І спогади і мрії</h2>
                   <p class="card__description">
                     Національний художній музей України до 100 річчя від дня
-                    народження видатної української художниці Тетяни
-                    Яблонської відкриває ретроспективну ювілейну виставку «І
-                    спогади і мрії».
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
                   </p>
                 </div>
               </div>
@@ -183,16 +192,65 @@
                   <span class="card__type">ЛЕКЦІЯ</span>
                   <span class="card__dates">26/08/2025 - 11:00</span>
                 </div>
-                <h2 class="card__title card__title--lecture">Від класицизму до<br> романтизму</h2>
+                <h2 class="card__title card__title--lecture">
+                  Від класицизму до
+                  <br />
+                  романтизму
+                </h2>
               </div>
             </article>
           </div>
         </section>
-        <section class="gallery"></section>
+        <section class="gallery container">
+          <h2 class="gallery__title">Галерея</h2>
+          <div
+            class="swiper mySwiper carousel gallery__carousel"
+          >
+            <div class="swiper-wrapper carousel__content">
+              <div class="swiper-slide carousel__slide">
+                <img
+                  src="images/carousel/carousel-1.png"
+                  loading="lazy"
+                  alt="img carousel-1"
+                  class="carousel__image"
+                />
+              </div>
+
+              <div class="swiper-slide carousel__slide">
+                <img
+                  src="images/carousel/carousel-2.png"
+                  loading="lazy"
+                  alt="img carousel-2"
+                  class="carousel__image"
+                />
+              </div>
+
+              <div class="swiper-slide carousel__slide">
+                <img
+                  src="images/carousel/carousel-3.png"
+                  loading="lazy"
+                  alt="img carousel-3"
+                  class="carousel__image"
+                />
+              </div>
+              <div class="swiper-slide carousel__slide">
+                <img
+                  src="images/carousel/carousel-4.png"
+                  loading="lazy"
+                  alt="img carousel-4"
+                  class="carousel__image"
+                />
+              </div>
+            </div>
+            <div class="carousel__pagination swiper-pagination"></div>
+          </div>
+        </section>
         <section class="subscription"></section>
       </div>
     </main>
 
-    <script src="scripts/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script> -->
+    <script type="module" src="../src/scripts/main.js"></script>
   </body>
 </html>
