add gallery & subscription sections

--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
           <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
           <a
             href="#"
-            class="section-button"
+            class="section-button header__buttom"
           >
             <h1 class="section-button__title">КВИТКИ</h1>
           </a>
@@ -201,11 +201,12 @@
             </article>
           </div>
         </section>
-        <section class="gallery container">
+        <section
+          class="gallery container"
+          id="gallery"
+        >
           <h2 class="gallery__title">Галерея</h2>
-          <div
-            class="swiper mySwiper carousel gallery__carousel"
-          >
+          <div class="swiper mySwiper carousel gallery__carousel">
             <div class="swiper-wrapper carousel__content">
               <div class="swiper-slide carousel__slide">
                 <img
@@ -245,12 +246,38 @@
             <div class="carousel__pagination swiper-pagination"></div>
           </div>
         </section>
-        <section class="subscription"></section>
+        <section
+          class="subscription"
+          id="contacts"
+        >
+          <div class="container">
+            <div class="subscription__content">
+              <div class="subscription__text-content">
+                <h2 class="subscription__title">Підписка</h2>
+                <p class="subscription__text">
+                  Бути в курсі всіх актуальних подій та останніх новин.
+                </p>
+              </div>
+              <div class="subscription__input-filde section-button">
+                <input
+                  type="email"
+                  name="email"
+                  id="email"
+                  placeholder="E-mail"
+                  class="subscription__input"
+                />
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script> -->
-    <script type="module" src="../src/scripts/main.js"></script>
+    <script
+      type="module"
+      src="../src/scripts/main.js"
+    ></script>
   </body>
 </html>
