Add footer section with social media icons and styles

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
             </ul>
           </nav>
 
-          <div class="menu__line"></div>
+          <div class="middle-line"></div>
 
           <div class="schedule">
             <h4 class="schedule__title">Графік роботи</h4>
@@ -273,8 +273,142 @@
       </div>
     </main>
 
+    <footer class="footer container">
+      <div class="top-bar top-bar--footer footer__top-bar">
+        <a
+          href="#"
+          class="top-bar__logo-link"
+        >
+          <img
+            src="images/Logo.png"
+            alt="logo Na Mu"
+            class="top-bar__logo-img"
+          />
+        </a>
+        <div class="top-bar__icon-content">
+          <a
+            href="https://www.facebook.com/"
+            class="icon icon--facebook"
+          ></a>
+          <a
+            href="https://www.instagram.com/"
+            class="icon icon--instagram"
+          ></a>
+        </div>
+      </div>
+      <div class="footer__content">
+        <div class="footer__text-content">
+          <div class="schedule footer__schedule">
+            <h4 class="schedule__title">Графік роботи</h4>
+            <div class="schedule__content schedule__content--footer">
+              <p class="schedule__text">
+                <strong>12:00 — 20:00</strong>
+                середа
+                <br />
+                <strong>12:00 — 20:00</strong>
+                четвер
+                <br />
+                <strong>12:00 — 20:00</strong>
+                п’ятниця
+                <br />
+                <strong>11:00 — 19:00</strong>
+                субота
+                <br />
+                <strong>11:00 — 19:00</strong>
+                неділя
+              </p>
+              <p class="schedule__text">
+                <strong>Вихідні</strong>
+                : понеділок, вівторок Каса припиняє роботу за 1 годину до
+                закриття музею
+              </p>
+            </div>
+          </div>
+          <div class="schedule footer__schedule">
+            <h4 class="schedule__title">Контакти:</h4>
+            <p class="schedule__text">
+              вул.
+              <a
+                href="https://maps.app.goo.gl/6Qy6w2Q9kQ8vQe1A7"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="schedule__link"
+              >
+                М. Грушевського, 6; Київ, 01001
+              </a>
+              <br />
+              тел.
+              <a
+                href="tel:+380442781357"
+                class="schedule__link"
+              >
+                +38 (044) 278-13-57
+              </a>
+              <br />
+              e-mail:
+              <a
+                href="mailto:info@namu.kyiv.ua"
+                class="schedule__link"
+              >
+                info@namu.kyiv.ua
+              </a>
+              <br />
+              тел.
+              <a
+                href="tel:+380442781357"
+                class="schedule__link"
+              >
+                +38 (044) 278-13-57
+              </a>
+              <br />
+            </p>
+          </div>
+        </div>
+        <div class="middle-line middle-line--footer"></div>
+        <nav class="nav nav--footer">
+          <ul class="nav__list nav__list--footer">
+            <li class="nav__items">
+              <a
+                class="nav__link nav__link--footer"
+                href="#gallery"
+              >
+                Галерея
+              </a>
+            </li>
+            <li class="nav__items">
+              <a
+                class="nav__link nav__link--footer"
+                href="#about"
+              >
+                Про Нас
+              </a>
+            </li>
+            <li class="nav__items">
+              <a
+                class="nav__link nav__link--footer"
+                href="#exhibitions"
+              >
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav__items">
+              <a
+                class="nav__link nav__link--footer"
+                href="#contacts"
+              >
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer__site-info">
+        <p>Designed by Zhyriada Marina</p>
+        <p>Copyright © 2025. All Rights Reserved.</p>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script> -->
     <script
       type="module"
       src="../src/scripts/main.js"
