Add scroll-to-top button functionality and styles

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
-<html lang="en">
-  <head class="page">
+<html
+  lang="en"
+  class="page"
+>
+  <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
@@ -49,6 +52,17 @@
         </div>
       </div>
     </div>
+
+    <button
+      class="scroll-to-top container"
+      aria-label="Повернутися нагору"
+    >
+      <img
+        src="./images/arrow-up.png"
+        alt="arrow up"
+        class="scroll-to-top__img"
+      />
+    </button>
 
     <aside
       class="menu page__menu"
