--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,12 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Title</title>
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      href="images/Logo.png"
+    />
     <!-- #region Links -->
     <link
       rel="stylesheet"
