add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -346,19 +346,26 @@
             >
               <p class="plan plan--text">Контакти</p>
               <p class="plan plan--text">
-                вул. М. Грушевського, 6; Київ, 01001 тел.
+                вул. М. Грушевського, 6;
+                <br />
+                Київ, 01001
+                <br />
+                тел.
                 <a
                   href="tel:+380442781357"
                   class="plan plan--text"
                 >
                   +38 (044) 278-13-57
                 </a>
-                факс
+                <br />
+                факс.
                 <a
                   href="tel:+380442787454"
                   class="plan plan--text"
                 >
-                  +38 (044) 278-74-54
+                  +38 (044)
+                  <br />
+                  278-74-54
                 </a>
                 <br />
                 e-mail:
