--- a/src/index.html
+++ b/src/index.html
@@ -346,9 +346,16 @@
             >
               <p class="plan plan--text">Контакти</p>
               <p class="plan plan--text">
-                вул. М. Грушевського, 6;
-                <br />
-                Київ, 01001
+                <a
+                  href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4493984,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?entry=ttu&g_ep=EgoyMDI1MDUwNy4wIKXMDSoASAFQAw%3D%3D"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  class="plan plan--text"
+                >
+                  вул. М. Грушевського, 6;
+                  <br />
+                  Київ, 01001
+                </a>
                 <br />
                 тел.
                 <a
