add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
           <img
             src="./images/eventsArticle 3.png"
             alt="eventsArticle3"
-            class="events__article__img"
+            class="events__article__img events__position__img"
           />
           <div class="events__position__div">
             <div class="events__position__text">
