add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,7 @@
           />
         </a>
         <div class="header__img">
-          <span class="header__logo">
-            NA
-            <br />
-            MU
-          </span>
+          <a href="#" class="header__logo">NA<br>MU</a>
         </div>
 
         <div
@@ -84,7 +80,7 @@
         aria-hidden="true"
       >
         <div class="header__menu-wrapper">
-          <a href="#!"
+          <a href="#"
           class="header__menu-icon-close"
             aria-label="Close menu"
           >
@@ -303,6 +299,7 @@
             type="email"
             placeholder="E-mail"
             class="subscription__input"
+            required
           />
           <button
             type="submit"
@@ -321,164 +318,83 @@
     <!-- Footer block -->
     <footer class="footer">
       <div class="footer__container">
-        <!-- Branding Section: Logo & Socials -->
-        <div class="footer__branding">
-          <span class="footer__logo">
-            NA
-            <br />
-            MU
-          </span>
-          <div class="footer__socials">
-            <a
-              href="#"
-              class="footer__social-link"
-              aria-label="Facebook"
-            >
-              <img
-                src="./images/icons/facebook-icon.png"
-                alt="Facebook"
-              />
+
+        <!-- Brand Section -->
+        <div class="footer__brand">
+          <a href="#" class="footer__brand__logo">NA<br>MU</a>
+          <div class="footer__brand__socials">
+            <a href="https://www.facebook.com/yourprofile"
+            target="_blank"
+            rel="noopener noreferrer" aria-label="Facebook">
+              <img src="images/icons/facebook-icon.png" alt="Facebook">
             </a>
-            <a
-              href="#"
-              class="footer__social-link"
-              aria-label="Instagram"
-            >
-              <img
-                src="./images/icons/instagram-icon.png"
-                alt="Instagram"
-              />
+            <a href="https://www.instagram.com/yourprofile"
+            target="_blank"
+            rel="noopener noreferrer" aria-label="Instagram">
+              <img src="images/icons/instagram-icon.png"
+              alt="Instagram">
             </a>
           </div>
         </div>
 
-        <!-- Contact Details and Address -->
-        <div class="footer__content">
-          <div class="footer__details">
-            <!-- Working Hours Section -->
-            <div class="footer__working-hours">
-              <p class="footer__title">Графік роботи:</p>
-              <ul class="footer__list">
-                <li class="footer__item">
-                  <strong>11:00 - 20:00</strong>
-                  середа
-                </li>
-                <li class="footer__item">
-                  <strong>12:00 - 20:00</strong>
-                  четвер
-                </li>
-                <li class="footer__item">
-                  <strong>12:00 - 20:00</strong>
-                  п’ятниця
-                </li>
-                <li class="footer__item">
-                  <strong>11:00 - 19:00</strong>
-                  субота
-                </li>
-                <li class="footer__item">
-                  <strong>11:00 - 19:00</strong>
-                  неділя
-                </li>
+        <div class="footer__wrap">
+          <!-- Info Section -->
+          <div class="footer__info">
+            <div class="footer__block footer__hours">
+              <p class="footer__block-title">Графік роботи</p>
+              <ul class="footer__schedule">
+                <li class="footer__schedule-item"><strong>12:00 — 20:00</strong> середа</li>
+                <li class="footer__schedule-item"><strong>12:00 — 20:00</strong> четвер</li>
+                <li class="footer__schedule-item"><strong>12:00 — 20:00</strong> п’ятниця</li>
+                <li class="footer__schedule-item"><strong>11:00 — 19:00</strong> субота</li>
+                <li class="footer__schedule-item"><strong>11:00 — 19:00</strong> неділя</li>
               </ul>
-
-              <div class="footer__notes">
-                <p class="footer__text">
-                  <strong>Вихідні:</strong>
-                  понеділок, вівторок
-                </p>
-                <p class="footer__note">
-                  Kaca припиняє роботу за 1 годину до закриття музею
-                </p>
+              <p class="footer__note">
+                <strong>Вихідні:</strong> понеділок, вівторок<br>
+                Каса припиняє роботу за 1 годину<br>
+                    до закриття музею
+              </p>
+            </div>
+            <div class="footer__block footer__contacts">
+              <p class="footer__block-title">Контакти:</p>
+              <div class="footer__address">
+                <a href="https://maps.google.com/?q=вул. М. Грушевського, 6, Київ, 01001"
+                target="_blank"
+                rel="noopener noreferrer">
+                  вул. М. Грушевського, 6, Київ, 01001
+                </a><br>
+                <a href="tel:+380442781357">тел. +38 (044) 278-13-57</a><br>
+                <a href="tel:+380442787454">факс +38 (044) 278-74-54</a><br>
+                <a href="mailto:info@namu.kiev.ua">e-mail: info@namu.kiev.ua</a>
               </div>
             </div>
-
-            <!-- Contact Info Section -->
-            <div
-              class="footer__contact-info"
-              id="contacts"
-            >
-              <p class="footer__title">Контакти:</p>
-              <p class="footer__address">
-                <a
-                  href="https://www.google.com/maps?q=вул.+M.+Грушевського,+6,+Київ,+01001"
-                  class="footer__link"
-                  target="_blank"
-                >
-                  вул. M. Грушевського, 6, Київ, 01001
-                </a>
-              </p>
-              <p class="footer__address">
-                тел.:
-                <a
-                  href="tel:+380442781357"
-                  class="footer__link"
-                >
-                  +38 (044) 278-13-57
-                </a>
-              </p>
-              <p class="footer__address">
-                факс:
-                <a
-                  href="tel:+380442781434"
-                  class="footer__link"
-                >
-                  +38 (044) 278-14-34
-                </a>
-              </p>
-              <p class="footer__address">
-                e-mail:
-                <a
-                  href="mailto:info@namu.kiev.ua?subject=Inquiry from Website"
-                  class="footer__link"
-                >
-                  info@namu.kiev.ua
-                </a>
-              </p>
+          </div>
+          <!-- Navigation Section -->
+          <div class="footer__nav">
+            <div class="footer__links">
+              <a href="#gallery">Галерея</a>
+              <a href="#events">Виставки та події</a>
             </div>
+            <div class="footer__links">
+              <a href="#about-us">Про Нас</a>
+              <a href="#contacts">Контакти</a>
+            </div>
+
           </div>
         </div>
-
-        <hr class="separator" />
-        <!-- Footer Navigation -->
-        <div class="footer__content">
-          <nav class="footer__nav">
-            <div class="footer__nav-links">
-              <a
-                href="#gallery"
-                class="footer__link"
-              >
-                Галерея
-              </a>
-              <a
-                href="#events"
-                class="footer__link"
-              >
-                Виставки та події
-              </a>
-            </div>
-            <div class="footer__nav-links">
-              <a
-                href="#about-us"
-                class="footer__link"
-              >
-                Про Hac
-              </a>
-              <a
-                href="#contacts"
-                class="footer__link"
-              >
-                Контакти
-              </a>
-            </div>
-          </nav>
-        </div>
+      </div>
       </div>
 
-      <!-- Footer Copyright -->
-      <div class="footer__copyright">
-        <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
-        <p class="footer__text">Designed by Zhyriada Marina</p>
+
+
+      <!-- Bottom Section -->
+      <div class="footer__bottom">
+        <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+        <p class="footer__credit">Designed by Zhyriada Marina</p>
       </div>
     </footer>
+
+
+
   </body>
 </html>
