--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,16 @@
   >
     <header class="header">
       <div class="header__img">
-        <img
+        <a
+          href="#"
           class="header__img--logo"
-          src="images/logo/NA-MU.svg"
-          alt="NA-MU-logo"
-        />
+        >
+          <img
+            class="header__img--logo-svg"
+            src="images/logo/NA-MU.svg"
+            alt="NA-MU-logo"
+          />
+        </a>
         <a
           href="#menu"
           class="header__img--menu"
@@ -60,7 +65,7 @@
         </a>
         <div class="header__container">
           <a
-            href="#current"
+            href="#виставки"
             class="header__container--link"
           >
             ПОДІЇ
@@ -383,11 +388,13 @@
     >
       <div class="footer__conteiner">
         <div class="footer__logo">
-          <img
-            class="footer__logo--na-mu"
-            src="images/logo/NA-MU.svg"
-            alt="NA-MU-logo"
-          />
+          <a href="#page-top">
+            <img
+              class="footer__logo--na-mu"
+              src="images/logo/NA-MU.svg"
+              alt="NA-MU-logo"
+            />
+          </a>
           <div class="footer__logo--social">
             <a href="https://www.facebook.com/">
               <img
