add task correction

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
           <div class="events__block">
             <img
               class="events__image"
-              src="./images/events-image1.svg"
+              src="./images/events-image1.png"
               alt="events-image1"
             />
             <div class="events__information">
@@ -187,7 +187,7 @@
           <div class="events__block">
             <img
               class="events__image"
-              src="./images/events-image2.svg"
+              src="./images/events-image2.png"
               alt="events-image2"
             />
             <div class="events__information">
@@ -373,10 +373,42 @@
               </div>
               <div class="contact-us__block">
                 <p class="contact-us__block--contacts">Контакти:</p>
-                <p class="contact-us__block--address">
-                  вул. М. Грушевського, 6; Київ, 01001 тел. +38 (044) 278-13-57
-                  факс +38 (044) 278-74-54 e-mail: info@namu.kiev.ua
-                </p>
+                <div class="contact-us__block--address">
+                  <a
+                    class="contact-us__social"
+                    href="https://maps.app.goo.gl/XYiazCTGGMPet6pg8"
+                    target="_blank"
+                  >
+                    вул. М. Грушевського, 6; Київ, 01001
+                  </a>
+                  <div>
+                    тел.
+                    <a
+                      class="contact-us__social"
+                      href="tel:+38 (044) 278-13-57"
+                    >
+                      +38 (044) 278-13-57
+                    </a>
+                  </div>
+                  <div>
+                    факс
+                    <a
+                      class="contact-us__social"
+                      href="tel:+38 (044) 278-74-54"
+                    >
+                      +38 (044) 278-74-54
+                    </a>
+                  </div>
+                  <div>
+                    e-mail:
+                    <a
+                      class="contact-us__social"
+                      href="mailto:info@namu.kiev.ua"
+                    >
+                      info@namu.kiev.ua
+                    </a>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="contact-us__button">
