--- a/src/index.html
+++ b/src/index.html
@@ -400,15 +400,33 @@
           <div class="footer__place">
             <h2 class="footer-place__title">Контакти:</h2>
             <div class="footer__adress">
-              <h3 class="footer__street">
-                вул. М. Грушевського, 6; Київ, 01001
-                <br />
-                тел. +38 (044) 278-13-57
-                <br />
-                факс +38 (044) 278-74-54
-                <br />
-                e-mail: info@namu.kiev.ua
-              </h3>
+              <div class="footer__map">
+                <a
+                  href="https://www.google.com/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0,+02000/@50.4493984,30.5282085,17z/data=!3m1!4b1!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?authuser=0&entry=ttu&g_ep=EgoyMDI1MDYwNC4wIKXMDSoASAFQAw%3D%3D"
+                  target="_blank"
+                  class="footer__street"
+                >
+                  вул. М. Грушевського, 6; Київ, 01001
+                </a>
+                <a
+                  href="tel:+380442781357"
+                  class="footer__number"
+                >
+                  тел. +38 (044) 278-13-57
+                </a>
+                <a
+                  href="tel:+380442787454"
+                  class="footer__fax"
+                >
+                  факс +38 (044) 278-74-54
+                </a>
+                <a
+                  href="mailto:info@namu.kiev.ua"
+                  class="footer__email"
+                >
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </div>
             </div>
           </div>
         </div>
