--- a/src/index.html
+++ b/src/index.html
@@ -59,17 +59,13 @@
           <h1 class="title">ХУДОЖНІЙ МУЗЕЙ</h1>
         </div>
         <div class="header__tickets">
-          <a
-            href="#actuals"
-            class="tickets"
-          >
-            <img
-              src="../src/images/Group 74.png"
-              class="tickets__img"
-              alt="tickets"
-            />
-          </a>
-          <h2 class="tickets__title">КВИТКИ</h2>
+          <div class="tickets">
+            <span class="tickets__title">КВИТКИ</span>
+            <button
+              class="tickets__btn"
+              aria-label="#actuals"
+            ></button>
+          </div>
         </div>
         <div class="podii">
           <a
@@ -430,6 +426,16 @@
             </div>
           </div>
         </div>
+        <a
+          href="#"
+          class="arrow-top"
+        >
+          <img
+            src="../src/images/Arrow up.png"
+            alt="arrow up"
+            class="arrow-up"
+          />
+        </a>
         <img
           src="../src/images/footer__line.png"
           alt="footer line"
